WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134489
REGRESSION(160908): vube.com video won't play after going into and out of fullscreen
https://bugs.webkit.org/show_bug.cgi?id=134489
Summary
REGRESSION(160908): vube.com video won't play after going into and out of ful...
Antti Koivisto
Reported
2014-07-01 05:07:05 PDT
We shouldn't reconstruct render tree when coming out of full screen mode.
Attachments
patch
(8.83 KB, patch)
2014-07-01 05:41 PDT
,
Antti Koivisto
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-07-01 05:07:19 PDT
<
rdar://problem/17292847
>
Antti Koivisto
Comment 2
2014-07-01 05:41:34 PDT
Created
attachment 234161
[details]
patch
Antti Koivisto
Comment 3
2014-07-01 08:18:08 PDT
http://trac.webkit.org/changeset/170638
Antti Koivisto
Comment 4
2014-07-02 13:22:56 PDT
and test in
https://trac.webkit.org/r170717
Alexey Proskuryakov
Comment 5
2015-02-07 15:50:15 PST
This test is very flaky, filed
bug 141364
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug